# rover_ws

./: .gitignore
install/: local_setup.sh  setup.sh
install/rover_control/lib/rover_control/: command_node  fake_stm32_bridge_node  rover_pose_node  set_mode_node  stm_bridge_node
install/rover_control/share/rover_control/: package.ps1  package.sh  package.xml
install/rover_control_msgs/share/rover_control_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_lidar/lib/rover_lidar/: fake_lidar_node  lidar_processing_node
install/rover_lidar/share/rover_lidar/: package.bash  package.dsv  package.ps1  package.sh
install/rover_perception/share/rover_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rover_perception/share/rover_perception/launch/: stereo_lidar_fusion.launch.py
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/rover_control/: README.md  setup.py
src/rover_control/launch/: launch_control.yaml
src/rover_control/rover_control/: command_node.py  fake_stm32_bridge_node.py  stm_bridge_node.py
src/rover_control_msgs/: CMakeLists.txt  package.xml
src/rover_control_msgs/msg/: OperationalModeSettings.msg
src/rover_lidar/: package.xml  setup.cfg  setup.py
src/rover_lidar/rover_lidar/: lidar_processing_node.py
src/rover_perception/: ARCHITECTURE.md  README.md  package.xml  setup.py
src/rover_perception/launch/: stereo_lidar_fusion.launch.py
src/rover_perception/rover_perception/: fake_mono_camera_node.py  fake_stereo_camera_node.py  frame_transform_node.py  global_pointcloud_fusion_node.py  led_detector_node.py  obstacle_grid_node.py  pointcloud_filters.py  pointcloud_preprocessing_node.py  position_rover_node.py  terrain_analysis.py  terrain_visualization_node.py
src/rover_perception_msgs/: CMakeLists.txt  package.xml
src/rover_perception_msgs/msg/: LedDetectionArray.msg  TerrainGrid.msg
src/rover_stereocam/: setup.cfg  setup.py
(+159 files in other folders)
