<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_perception</name>
  <version>0.0.0</version>
  <description>
    Perception stack fusing mono-cam LED detection, stereo-cam + lidar point
    clouds and IMU data on the Jetson Orin Nano perception module. See
    ARCHITECTURE.md in this package for design notes.
  </description>
  <maintainer email="joshua.kaelble@gmx.dem">joshua</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <exec_depend>rover_lidar</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
